--- a/index.html
+++ b/index.html
@@ -6,29 +6,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Let's Code</title>
+	<title>&lt; Let's Code! &#x2F;&gt;</title>
 	<link rel="shortcut icon" href="img/self.png">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-	<link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
-	<style>
-		body {
-			padding-top: 50px;
-		}
-		
-		.starter-template {
-			padding: 40px 15px;
-			text-align: center;
-		}
-	</style>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">	
 </head>
 <style>
 	body {
+		padding-top: 50px;
 		background-color: #e2e2e2;
 		border-top: 5px solid #5636a2;
 		margin: 0px;
-		font-family: 'VT323', monospace;
+		font-family: monospace;
 		font-weight: bold;
+	}
+	.starter-template {
+			padding: 40px 15px;
+			text-align: center;
 	}
 	
 	a {
@@ -47,19 +41,8 @@
 		margin-bottom: 3%;
 	}
 </style>
-<script type="text/javascript">
-	console.log('%c Hello there..', 'background: #fff; color: #5636a2');
-	console.log('%c Appears you are a Geek!', 'background: #222; color: #bada55; font-size: 130%; font-family:monospace;');
-
-	var link = "https://www.github.com/jparasha";
-	var after = "If you like this kind of stuffs, feel free to contribute here " + link + " and send me constructive feedback";
-
-	console.log('%c ' + after, 'background: #fff; color: #5636a2;');
-	console.log("%c I can be contacted @ jayantparashar@outlook.com", "background: #fff; color: #5636a2");
-</script>
 
 <body>
-
 	<div class="container">
 		<div class="starter-template">
 			<img src="img/self.jpg" class="image" alt="">
@@ -69,7 +52,7 @@
 			<ul class="list-inline margin">
 				<li><a href="https://twitter.com/ActuallyJayant">🐦 Twitter</a></li>
 				<li><a href="https://github.com/jparasha">🐙 GitHub</a></li>
-				<li><a href="https://jparashar.github.io/projects.html">📝 Projects</a></li>
+				<li><a href="https://jparasha.github.io/projects.html">📝 Projects</a></li>
 				<li><a href="/now">&#9679; Now</a></li>
 			</ul>
 
@@ -78,7 +61,16 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script>
+	<script type="text/javascript">		
+		console.log('%c Hello there..', 'background: #fff; color: #5636a2');
+		console.log('%c Appears you are a Geek!', 'background: #222; color: #bada55; font-size: 130%; font-family:monospace;');
+
+		var link = "https://www.github.com/jparasha";
+		var after = "If you like this kind of stuffs, feel free to contribute here " + link + " and send me constructive feedback";
+
+		console.log('%c ' + after, 'background: #fff; color: #5636a2;');
+		console.log("%c I can be contacted @ jayantparashar@outlook.com", "background: #fff; color: #5636a2");
+
 		(function (i, s, o, g, r, a, m) {
 			i['GoogleAnalyticsObject'] = r;
 			i[r] = i[r] || function () {
