--- a/index.html
+++ b/index.html
@@ -39,12 +39,7 @@
 		.margin{
 			margin-bottom: 2%;			
 		}
-	}	
-	/*@media (max-width: 700px), handheld and (orientation: portrait) { 
-		.margin {
-			margin-bottom: 7%;
-		}
-	}*/
+	}
 	@media (max-width: 700px){ 
 		.margin {
 			margin-bottom: 7%;
@@ -61,8 +56,7 @@
 <body>
 	<div class="container">
 		<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-center">
-			<!--<img src="img/self.jpg" class="image" alt="">-->
-			<a href="#"  title="home"><img src="img/self1.jpg" /></a>
+			<a href="#"  title="home"><img src="img/self.jpg" /></a>
 			<h2 class="margin">&#x2615;</h2>
 			<h5 class="margin"><strong>Jayant Parashar</strong></h5>
 			<h5 class="margin">Creating stuffs at <a href="https://www.capgemini.com"><strong>CapGemini</strong></a>.</h5>
