--- a/index.html
+++ b/index.html
@@ -51,12 +51,15 @@
 			font-size: 130%;
 		}
 	}
+	.img-circle{
+		border-radius:50%;
+	}
 </style>
 
 <body>
 	<div class="container">
 		<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-center">
-			<a href="#"  title="home"><img src="img/self.jpg" /></a>
+			<a href="#"  title="home"><img src="img/self_hd.jpg"  class="img-circle" /></a>
 			<h2 class="margin">&#x2615;</h2>
 			<h5 class="margin"><strong>Jayant Parashar</strong></h5>
 			<h5 class="margin">Creating stuffs at <a href="https://www.capgemini.com"><strong>CapGemini</strong></a>.</h5>
