--- a/index.html
+++ b/index.html
@@ -10,52 +10,8 @@
 	<link rel="shortcut icon" href="img/self.png">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">	
+	<link rel="stylesheet" href="css/index.css">	
 </head>
-<style>
-	body {
-		padding-top: 50px;
-		background-color: #fffbfb;
-		border-top: 5px solid #5636a2;
-		margin: 0px;
-		font-family: monospace;
-		font-weight: bold;
-	}
-	li{
-		text-decoration: underline;
-		font-size: 90%;
-	}
-	
-	a {
-		color: #5636a2;
-	}
-	a:hover {
-		color: #3F51B5;
-	}
-	
-	.image {		
-		margin-bottom: 3%;
-	}
-	@media (min-width: 700px) {
-		.margin{
-			margin-bottom: 2%;			
-		}
-	}
-	@media (max-width: 700px){ 
-		.margin {
-			margin-bottom: 7%;
-		}
-	}
-	@media (min-width: 1440px) {
-		.margin{
-			margin-bottom: 3%;
-			font-size: 130%;
-		}
-	}
-	.img-circle{
-		border-radius:50%;
-	}
-</style>
-
 <body>
 	<div class="container">
 		<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-center">
@@ -76,31 +32,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript">		
-		console.log('%c Hello there..', 'background: #fff; color: #5636a2');
-		console.log('%c Appears you are a Geek!', 'background: #222; color: #bada55; font-size: 130%; font-family:monospace;');
-
-		var link = "https://www.github.com/jparasha";
-		var after = "If you like this kind of stuffs, feel free to contribute here " + link + " and send me constructive feedback";
-
-		console.log('%c ' + after, 'background: #fff; color: #5636a2;');
-		console.log("%c I can be contacted @ jayantparashar@outlook.com", "background: #fff; color: #5636a2");
-
-		(function (i, s, o, g, r, a, m) {
-			i['GoogleAnalyticsObject'] = r;
-			i[r] = i[r] || function () {
-				(i[r].q = i[r].q || []).push(arguments)
-			}, i[r].l = 1 * new Date();
-			a = s.createElement(o),
-				m = s.getElementsByTagName(o)[0];
-			a.async = 1;
-			a.src = g;
-			m.parentNode.insertBefore(a, m)
-		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-		ga('create', 'UA-99377211-2', 'auto');
-		ga('send', 'pageview');
-	</script>
+	<script src="js/index.js"></script>
 </body>
 
 </html>
