Added github thumb

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<li><a href="https://jparasha.github.io/projects.html">📝 Projects</a></li>
 				<li><a href="/now">&#9679; Now</a></li>
 			</ul>
-			<h6 style="color: grey;">powered by <a href="https://www.github.com">Github</a></h6>
+			<h6 style="color: grey;">powered by <a href="https://www.github.com"><img src="img/invertocat.png" alt="Github"></a></h6>
 
 		</div>
 	</div>
