--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
 
 				<div class="container">
 					<div class="starter-template text-center">
-						<h1>404 <i>snappp!!</i> <br/>	That's an <strong style="color:red; padding-left:1%; padding-right:1%; background: rgba(239, 236, 236, 0.79);">error:&#40;<br/></strong><br/> You may return <a href="https://www.jparasha.github.io"><u>Home</u></a></h1>	
+						<h1>404 <i>snappp!!</i> <br/>	That's an <strong style="color:red; padding-left:1%; padding-right:1%; background: rgba(239, 236, 236, 0.79);">error:&#40;<br/></strong><br/> You may return <a href="https://jparasha.github.io"><u>Home</u></a></h1>	
 					</div>					
 				</div>
 				<script>
