--- a/404.html
+++ b/404.html
@@ -10,23 +10,32 @@
 				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
 				<style>
-					body{ font-family: monospace} 
-					h1{left: 0; 
+					body{ font-family: monospace}					
+					@media (max-width: 700px){ 
+						h3 {
+							font-size: 120% !important;
+						}
+					}
+					@media (min-width: 1440px) {
+						h3{
+							font-size: 160% !important;
+						}						
+					}					
+					h3{left: 0; 
 						padding: 1px; 
 						line-height: 120%;
 						margin: auto;margin-top: -100px;position: absolute;top: 50%;
 						width: 100%;
 					}
 					.bottom{bottom: 0%;position: absolute;
-					}
-					h5{text-align: center; left: 50%; bottom: 0%;position: absolute;}					
+					}				
 				</style>						
 </head>
 <body>			
 
 				<div class="container">
 					<div class="starter-template text-center">
-						<h1>404 <i>snappp!!</i> <br/>	That's an <strong style="color:red; padding-left:1%; padding-right:1%; background: rgba(239, 236, 236, 0.79);">error:&#40;<br/></strong><br/> You may return <a href="https://jparasha.github.io"><u>Home</u></a></h1>	
+						<h3>404 <i>snappp!!</i> <br/>	That's an <strong style="color:red; padding-left:1%; padding-right:1%; background: rgba(239, 236, 236, 0.79);">error:&#40;<br/></strong><br/> You may return <a href="https://jparasha.github.io"><u>Home</u></a></h3>	
 					</div>					
 				</div>
 				<script>
