added unicode symbols

--- a/404.html
+++ b/404.html
@@ -12,16 +12,16 @@
 				<style>
 					body{ font-family: monospace}					
 					@media (max-width: 700px){ 
-						h3 {
+						h2 {
 							font-size: 120% !important;
 						}
 					}
 					@media (min-width: 1440px) {
-						h3{
+						h2{
 							font-size: 160% !important;
 						}						
 					}					
-					h3{left: 0; 
+					h2{left: 0; 
 						padding: 1px; 
 						line-height: 120%;
 						margin: auto;margin-top: -100px;position: absolute;top: 50%;
@@ -35,7 +35,10 @@
 
 				<div class="container">
 					<div class="starter-template text-center">
-						<h3>404 <i>snappp!!</i> <br/>	That's an <strong style="color:red; padding-left:1%; padding-right:1%; background: rgba(239, 236, 236, 0.79);">error:&#40;<br/></strong><br/> You may return <a href="https://jparasha.github.io"><u>Home</u></a></h3>	
+						<h2>&#9971;<br/><u><i>404 snappp</i></u>
+							<br/><br/>	Oh, noo!! That's an 
+							<strong style="color:red; padding-left:1%; padding-right:1%; background: rgba(239, 236, 236, 0.79);">error:&#40;<br/></strong>
+							 return &#9755;  <a href="https://jparasha.github.io"><u>Home</u></a></h2>	
 					</div>					
 				</div>
 				<script>
