--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 			<h5 class="margin"><strong>Jayant Parashar</strong></h5>
 			<h5 class="margin">Creating stuffs at <a href="https://www.capgemini.com"><strong>CapGemini</strong></a>.</h5>
 			<ul class="list-inline margin">
-				<li><a href="https://twitter.com/ActuallyJayant">🐦 Twitter</a></li>
-				<li><a href="https://github.com/jparasha">🐙 GitHub</a></li>
-				<li><a href="https://jparasha.github.io/projects.html">📝 Projects</a></li>
+				<li><a href="https://twitter.com/ActuallyJayant"  target="_blank" >🐦 Twitter</a></li>
+				<li><a href="https://github.com/jparasha"  target="_blank" >🐙 GitHub</a></li>
+				<li><a href="https://angel.co/ActuallyJayant"  target="_blank" >&#9996; AngelList</a></li>
+				<li><a href="https://jparasha.github.io/projects.html"  target="_blank" >📝 Projects</a></li>
 				<li><a href="/now">&#9679; Now</a></li>
 			</ul>
 			<h6 style="color: grey;">powered by <a href="https://www.github.com"><img src="img/invertocat.png" alt="Github"></a></h6>
