--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title> Jayant Parashar </title>
+	<title> Jayant Parashar [_ J. Parashar _] </title>
 	<link rel="shortcut icon" href="img/self.png">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">	
 	<link rel="stylesheet" href="css/index.css">	
@@ -17,13 +17,14 @@
 			<a href="#"  title="home"><img src="img/self_hd.jpg"  class="img-circle" /></a>
 			<h2 class="margin">&#x2615;</h2>
 			<h5 class="margin"><strong>Jayant Parashar</strong></h5>
-			<h5 class="margin">Creating stuffs at <a href="https://www.capgemini.com"><strong>CapGemini</strong></a>.</h5>
+			<h5 class="margin">Creating stuffs on Cloud at <a href="https://www.capgemini.com"><strong>CapGemini</strong></a>.</h5>
 			<ul class="list-inline margin">
 				<li><a href="https://twitter.com/ActuallyJayant"  target="_blank" >🐦 Twitter</a></li>
 				<li><a href="https://github.com/jparasha"  target="_blank" >🐙 GitHub</a></li>
+				<li><a href="https://stackoverflow.com/users/6265883/j-parashar"  target="_blank" >&#128218; StackOverflow</a></li>
 				<li><a href="https://angel.co/ActuallyJayant"  target="_blank" >&#9996; AngelList</a></li>
 				<li><a href="https://jparasha.github.io/projects.html"  target="_blank" >📝 Projects</a></li>
-				<li><a href="/now">&#9679; Now</a></li>
+				<li><a href="/now">&#x2139; Now</a></li>
 			</ul>
 			<h6 style="color: grey;">powered by <a href="https://www.github.com"><img src="img/invertocat.png" alt="Github"></a></h6>
 
