--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
+	<meta name="keyword" content="Jayant Parashar, jparasha, J. Parashar, J, Jayant, Parashar, Jayant P, Javascript Developer, AWS, Cloud">
 	<meta name="author" content="">
-	<title> Jayant Parashar [_ J. Parashar _] </title>
+	<title> Jayant Parashar </title>
 	<link rel="shortcut icon" href="img/self.png">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">	
 	<link rel="stylesheet" href="css/index.css">	
