--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<a href="#"  title="home"><img src="img/self_hd.jpg"  class="img-circle" /></a>
 			<h2 class="margin">&#x2615;</h2>
 			<h5 class="margin"><strong>Jayant Parashar</strong></h5>
-			<h5 class="margin">Creating stuffs on Cloud at <a href="https://www.capgemini.com"><strong>CapGemini</strong></a>.</h5>
+			<h5 class="margin">Helping you move to Cloud ..</h5>
 			<ul class="list-inline margin">
 				<li><a href="https://twitter.com/ActuallyJayant"  target="_blank" >🐦 Twitter</a></li>
 				<li><a href="https://github.com/jparasha"  target="_blank" >🐙 GitHub</a></li>
