--- a/index.html
+++ b/index.html
@@ -1,50 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="keyword" content="Jayant Parashar, jparasha, J. Parashar, J, Jayant, Parashar, Jayant P, Javascript Developer, AWS, Cloud">
-	<meta name="author" content="">
-	<title> Jayant Parashar </title>
-	<link rel="shortcut icon" href="img/self.png">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">	
-	<link rel="stylesheet" href="css/index.css">	
-</head>
-<body>
-	<div class="container">
-		<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 text-center">
-			<a href="#"  title="home"><img src="img/self_hd.jpg"  class="img-circle" /></a>
-			<h2 class="margin">&#x2615;</h2>
-			<h5 class="margin"><strong>Jayant Parashar</strong></h5>
-			<h5 class="margin">Helping you move to Cloud ..</h5>
-			<ul class="list-inline margin">
-				<li><a href="https://twitter.com/ActuallyJayant"  target="_blank" >🐦 Twitter</a></li>
-				<li><a href="https://github.com/jparasha"  target="_blank" >🐙 GitHub</a></li>
-				<li><a href="https://stackoverflow.com/users/6265883/j-parashar"  target="_blank" >&#128218; StackOverflow</a></li>
-				<li><a href="https://angel.co/ActuallyJayant"  target="_blank" >&#9996; AngelList</a></li>
-				<li><a href="https://jparasha.github.io/projects.html"  target="_blank" >📝 Projects</a></li>
-				<li><a href="/now">&#x2139; Now</a></li>
-			</ul>
-			<h6 style="color: grey;">powered by <a href="https://www.github.com"><img src="img/invertocat.png" alt="Github"></a></h6>
-
-		</div>
-	</div>
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="js/index.js"></script>
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-99377211-2', 'auto');
-	  ga('send', 'pageview');
-
-</script>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#13151f"/><meta name="description" content="Jayant Parashar"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css"/><link rel="preconnect" href="https://fonts.googleapis.com"/><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/><link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;400;700&display=swap" rel="stylesheet"/><title>App</title><script defer="defer" src="/static/js/main.f2e7c645.js"></script><link href="/static/css/main.65a7d062.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
