refactor : updated icons

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;400;700&display=swap"
       rel="stylesheet"
     />
-    <title>App</title>
+    <title>Jayant Parashar | aka jparasha | Front-End Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
