refactor : font update

--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css"
     /> -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;400;700&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <title>Jayant Parashar | aka jparasha | Front-End Developer</title>
   </head>
   <body>
