--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,21 @@
       rel="stylesheet"
     /> -->
     <title>Jayant Parashar | aka jparasha | Front-End Developer</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-DE1Z7EYR27"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-DE1Z7EYR27");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
